--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aunty’s, Mom, and a moment to remember 😍🔥</title>
+    <title>Aunty and mom, moments full of joy 😍</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         body {
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <div class="video-title">Aunty’s, Mom, and a moment to remember 😍🔥<span aria-label="smile" role="img"></span></div>
+    <div class="video-title">Aunty and mom, moments full of joy 😍<span aria-label="smile" role="img"></span></div>
     <center><style type="text/css">
   .mobileShow {display: none;}
 
@@ -106,7 +106,7 @@
 ></script></center></div>
 	<br>
     <div class="video-wrapper">
-        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/71ade2cbd.jpg">
+        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/71a476e54.jpg">
             <source src="https://cdn.aceimg.com/fa65b1891.mp4" type="video/mp4">
         </video><center>
 		<div style="text-align: center; margin: 30px 0;">
